syntax = "proto3";

package device_tracker;
option go_package = "github.com/dak151449/IOT_Device_Tracker_Service/pkg/device_tracker;dtapi";

import "google/protobuf/timestamp.proto";

service DeviceTrackerService {
	rpc GetDeviceGroups(GetDeviceGroupsRequest) returns (GetDeviceGroupsResponse) {}
	rpc GetDevicesFromGroup(GetDevicesFromGroupRequest) returns (GetDevicesFromGroupResponse) {}
	rpc CreateDeviceGroup(CreateDeviceGroupRequest) returns (CreateDeviceGroupResponce) {}
}

message GetDeviceGroupsRequest {}

message DeviceGroupData {
	int64 id = 1;
	string name = 2;
	string status = 3;
	google.protobuf.Timestamp created_at = 4;
	string description = 5;
}

message GetDeviceGroupsResponse {
	repeated DeviceGroupData groups = 1;
}

message GetDevicesFromGroupRequest {
	int64 group_id = 1;
}

message DeviceData {
	int64 id = 1;
	string name = 2;
	string status = 3;
	google.protobuf.Timestamp created_at = 4;
	string description = 5;
}

message GetDevicesFromGroupResponse {
	repeated DeviceData devices = 1;
}

message CreateDeviceGroupRequest {
	string name = 1;
	string status = 2;
	string description = 3;
}

message CreateDeviceGroupResponce {
	int64 id = 1;
}